fixed restart, added jump on click

--- a/styles/index.css
+++ b/styles/index.css
@@ -67,6 +67,13 @@ main{
     color: #1B2735;
     
 }
+.time-shower{
+    position: absolute;
+    top: 50px;
+    color: white;
+    font-size: 34px;
+    text-transform: uppercase;
+}
 #restart{
     display: none;
 }
